k8s/service.yaml
# mbsrn-managed-manifest:site_repo_template_v1
apiVersion: v1
kind: Service
metadata:
  name: site-web
  namespace: mbsrn-www
  labels:
    app.kubernetes.io/managed-by: mbsrn
    app.kubernetes.io/name: site-web
    mbsrn.io/repo: mbsrn-www
    mbsrn.io/environment-key: gke-prod
    mbsrn.io/environment-source: admin-config
    mbsrn.io/site-id: df16ee39-faa4-4af4-ae16-36aeb5d1288b
    mbsrn.io/namespace-source: repo-name
    mbsrn.io/preview-hostname: mbsrn-www.site.mbsrn.com
  annotations:
    cloud.google.com/neg: '{"ingress": true}'
    cloud.google.com/backend-config: '{"default": "site-web-backend-config-mbsrn-www"}'
spec:
  selector:
    app.kubernetes.io/name: site-web
  ports:
    - name: http
      port: 80
      targetPort: 8080
  type: ClusterIP
