k8s/ingress.yaml
# mbsrn-managed-manifest:site_repo_template_v1
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: site-web
  namespace: mbsrn-www
  labels:
    app.kubernetes.io/managed-by: mbsrn
    app.kubernetes.io/name: site-web
    mbsrn.io/repo: mbsrn-www
    mbsrn.io/environment-key: gke-prod
    mbsrn.io/environment-source: admin-config
    mbsrn.io/site-id: df16ee39-faa4-4af4-ae16-36aeb5d1288b
    mbsrn.io/namespace-source: repo-name
    mbsrn.io/preview-hostname: mbsrn-www.site.mbsrn.com
  annotations:
    kubernetes.io/ingress.class: gce
    kubernetes.io/ingress.global-static-ip-name: site-web-preview-ip-mbsrn-www
    networking.gke.io/managed-certificates: site-web-preview-cert-mbsrn-www
    networking.gke.io/v1beta1.FrontendConfig: site-web-frontend-config-mbsrn-www
spec:
  ingressClassName: gce
  rules:
    - host: mbsrn-www.site.mbsrn.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: site-web
                port:
                  number: 80
